✨ feat - Add policy app

--- a/_i18n/br.yml
+++ b/_i18n/br.yml
@@ -27,7 +27,7 @@ page:
     sections:
       experiences:
         title: "Experiências"
-        subtitle: "Séries de histórias, memórias e vivências do universo Desbravador"
+        subtitle: "Séries de histórias, memórias e vivências no universo Desbravador"
       foundation:
         title: "Fundamentação"
         subtitle: "Séries temáticas de estudo, prática e aprofundamento no universo Desbravador"
