--- a/_i18n/us.yml
+++ b/_i18n/us.yml
@@ -27,7 +27,7 @@ page:
     sections:
       experiences:
         title: "Experiences"
-        subtitle: "Series of stories, memories, and lived experiences from the Pathfinders world"
+        subtitle: "Series of stories, memories, and lived experiences in the Pathfinders world"
       foundation:
         title: "Foundation"
         subtitle: "Thematic series on study, practice, and deeper exploration in the Pathfinders world"
